plan has changed

--- a/5. ROADMAP.md
+++ b/5. ROADMAP.md
@@ -1,16 +1,19 @@
-# 🗺️ Implementation Roadmap - Zero to Google Scale
+# 🗺️ Implementation Roadmap - Zero to Hyperscale
 
 ## Overview
 
-This roadmap takes you from **MVP (Month 1) to Hyperscale (Year 3)** with realistic milestones and performance targets at each phase.
+This roadmap takes you from **MVP (Month 1) to 5B+ RPS Hyperscale (Year 3)** with realistic milestones and performance targets at each phase.
+
+**Strategy:** Start with Glommio Rust (fast to develop), migrate hot paths to Seastar C++ for maximum performance.
 
 ---
 
 ## 📅 Phase 0: Foundation (Weeks 1-2)
 
 ### Goals
+
 - Set up development environment
-- Choose final architecture
+- Choose final architecture (DONE!)
 - Set up CI/CD
 
 ### Deliverables
@@ -18,83 +21,93 @@ This roadmap takes you from **MVP (Month 1) to Hyperscale (Year 3)** with realis
 ```yaml
 Infrastructure:
   - ✅ Rent 3 physical servers (Hetzner/OVH)
-    - 1x Dev server (32 cores, 128GB RAM)
-    - 2x Production servers (64 cores, 256GB RAM each)
+    - 1x Dev server (32 cores, 128GB RAM) - $100/month
+    - 2x Production servers (64 cores, 256GB RAM) - $200/month each
   - ✅ Set up Git repository
   - ✅ Set up CI/CD (Tekton or GitLab CI)
-  
+
 Development:
   - ✅ Monorepo structure
   - ✅ Rust workspace configuration
+  - ✅ Seastar C++ setup (for Phase 2+)
   - ✅ Docker images (Alpine-based)
-  - ✅ Development environment (VS Code + rust-analyzer)
-  
+  - ✅ Development environment
+
 Documentation:
   - ✅ Architecture docs (DONE)
-  - ✅ Tech stack (DONE)
+  - ✅ Tech stack (DONE - FASTEST STACK)
   - ✅ Performance guide (DONE)
   - ✅ API design (TODO)
 ```
 
-### Technology Decisions
+### Technology Decisions (FINAL)
 
 ```yaml
-Core Framework: 
-  Decision: Glommio (Rust) for MVP
-  Reason: Faster than Tokio, easier than Seastar
-  Future: Migrate hot paths to Seastar C++ later
+Hot Paths (Phase 2+):
+  Framework: Seastar C++
+  Reason: 6M RPS/core, proven at ScyllaDB/Redpanda scale
+  Services: Ad serving, RTB bidding, Analytics ingestion
+
+Services (Phase 1+):
+  Framework: Glommio Rust
+  Reason: 1.1M RPS/core, safer than C++, easier development
+  Services: Campaign mgmt, Auth, Billing, Reporting
 
 Serialization:
-  Decision: Cap'n Proto
-  Reason: Zero-copy, fastest
-  
-Database:
-  Decision: ScyllaDB + DragonflyDB
-  Reason: Performance + ease of deployment
-  
+  Internal: Cap'n Proto (0ns deserialization)
+  External: FlatBuffers (10ns)
+
+Databases:
+  Cache: DragonflyDB (25x faster than Redis, Seastar-based)
+  Primary: ScyllaDB (10x faster than Cassandra, Seastar-based)
+  Analytics: ClickHouse (1B rows/sec)
+  Queue: Redpanda (10x faster than Kafka, Seastar-based)
+
 Frontend:
-  Decision: SolidJS + Vite
-  Reason: Fastest reactive framework
+  Framework: SolidJS (fastest reactive)
+  Build: Vite
 ```
 
-### Time: 2 weeks | Cost: $1,500 (servers)
+### Time: 2 weeks | Cost: $500 (servers)
 
 ---
 
 ## 📅 Phase 1: MVP - Core Ad Serving (Months 1-2)
 
 ### Goals
+
 - Serve ads with basic targeting
-- Handle 10k RPS
-- <100ms latency p99
+- Handle 100k RPS (Glommio Rust)
+- <10ms latency p99
 
 ### Features
 
 ```yaml
-Ad Serving:
+Ad Serving (Glommio Rust - MVP):
   - ✅ Ad selection algorithm (simple scoring)
   - ✅ Creative management (upload, store)
   - ✅ Impression tracking
   - ✅ Click tracking
   - ✅ Basic targeting (geo, device, time)
-  
+  - Performance: 100k RPS per server (sufficient for MVP)
+
 Campaign Management:
   - ✅ Campaign CRUD
   - ✅ Budget tracking
   - ✅ Start/end dates
   - ✅ Daily budget caps
-  
+
 Analytics:
   - ✅ Real-time dashboard (impressions, clicks, CTR)
   - ✅ Basic reporting (daily aggregates)
-  
+
 Admin:
   - ✅ User authentication (JWT)
   - ✅ Admin dashboard (SolidJS)
   - ✅ Campaign management UI
 ```
 
-### Architecture
+### Architecture (All Glommio Rust)
 
 ```
 ┌─────────────────────────────────────┐
@@ -102,17 +115,18 @@ Admin:
 └─────────────────────────────────────┘
                  ↓
 ┌─────────────────────────────────────┐
-│    API Gateway (Rust + Glommio)     │
+│    API Gateway (Glommio Rust)       │
 │    - Auth middleware                │
 │    - Rate limiting                  │
-│    - Request routing                │
+│    - Cap'n Proto                    │
 └─────────────────────────────────────┘
                  ↓
     ┌────────────┴────────────┐
     ↓                         ↓
 ┌──────────┐          ┌──────────────┐
-│ Ad Server│          │Campaign Mgmt │
-│ (Rust)   │          │  (Rust)      │
+│Ad Server │          │Campaign Mgmt │
+│(Glommio) │          │  (Glommio)   │
+│100k RPS  │          │              │
 └──────────┘          └──────────────┘
     ↓                         ↓
 ┌──────────────────────────────────┐
@@ -122,72 +136,102 @@ Admin:
 └──────────────────────────────────┘
 ```
 
-### Tech Stack
+### Tech Stack (Phase 1)
 
 ```toml
 # Cargo.toml
 [workspace]
 members = [
     "services/gateway",
-    "services/ad-server",
+    "services/ad-server",      # Glommio Rust (100k RPS OK for MVP)
     "services/campaign-mgmt",
     "services/analytics",
     "libs/common",
 ]
 
 [workspace.dependencies]
-glommio = "0.9"
-capnp = "0.18"
-sqlx = "0.7"
-redis = "0.24"
-mimalloc = "0.1"
+glommio = "0.9"  # Thread-per-core, 1.1M RPS/core
+capnp = "0.18"   # Zero-copy serialization
+sqlx = "0.7"     # PostgreSQL
+redis = "0.24"   # DragonflyDB client
+mimalloc = "0.1" # Fast allocator
 ```
 
 ### Performance Targets
 
 ```yaml
-RPS: 10,000 requests/sec (single server)
-Latency p50: <10ms
-Latency p99: <100ms
-CPU: <30% utilization
-Memory: <16GB
+RPS: 100,000 requests/sec (single server, Glommio)
+Latency p50: <5ms
+Latency p99: <10ms
+CPU: <40% utilization
+Memory: <32GB
+Database: DragonflyDB (cache), PostgreSQL (metadata)
 ```
 
-### Time: 2 months | Team: 2-3 engineers | Cost: $2,000/month
+### Time: 2 months | Team: 2-3 engineers | Cost: $500/month
 
 ---
 
-## 📅 Phase 2: Production Ready (Months 3-4)
+## 📅 Phase 2: Seastar Migration - Maximum Performance (Months 3-4)
 
 ### Goals
-- Scale to 100k RPS
-- Add RTB support
-- <10ms latency p99
+
+- Migrate hot paths to Seastar C++
+- Scale to 10M RPS
+- <2ms latency p99
+
+### Migration Strategy
+
+```yaml
+MIGRATE TO SEASTAR C++:
+  ✅ Ad Serving Engine
+     - From: Glommio (100k RPS)
+     - To: Seastar C++ (6M RPS per core!)
+     - Reason: Need high throughput
+     - 60x performance increase!
+
+  ✅ RTB Bidding Engine
+     - New service in Seastar C++
+     - Target: <500μs p99 latency
+     - Auction algorithm with SIMD
+
+  ✅ Analytics Ingestion
+     - From: Glommio
+     - To: Seastar C++
+     - Target: 10M events/sec
+
+KEEP IN GLOMMIO RUST:
+  ✅ Campaign Management (complex logic, frequent changes)
+  ✅ User Management (security critical, Rust safety)
+  ✅ Billing (financial accuracy important)
+  ✅ Reporting APIs (1M RPS is enough)
+  ✅ Fraud Detection (Rust + ML ecosystem)
+```
 
 ### New Features
 
 ```yaml
-RTB (Real-Time Bidding):
+RTB (Real-Time Bidding) - Seastar C++:
   - ✅ OpenRTB 2.5 support
-  - ✅ Bid request parsing
-  - ✅ Auction algorithm
-  - ✅ Bid response generation
+  - ✅ Bid request parsing (Cap'n Proto)
+  - ✅ Auction algorithm (SIMD-optimized)
+  - ✅ Bid response generation (<500μs)
   - ✅ Demand partner integration (3-5 partners)
-  
+
 Advanced Targeting:
   - ✅ Behavioral targeting
   - ✅ Interest categories
   - ✅ Contextual targeting
   - ✅ Frequency capping
   - ✅ Audience segments
-  
-Fraud Detection:
+
+Fraud Detection - Glommio Rust:
   - ✅ Basic bot detection
   - ✅ IP blacklisting
   - ✅ Click fraud prevention
   - ✅ Invalid traffic filtering
-  
-Billing:
+
+Billing - Glommio Rust:
   - ✅ Invoice generation
   - ✅ Payment processing
   - ✅ Credit system
@@ -197,7 +241,19 @@ Billing:
 ### Architecture Updates
 
 ```
-Added:
+Added Components:
+  - Seastar C++ services (Ad Serving, Bidding, Analytics)
+  - ScyllaDB cluster (3 nodes, Seastar-based!)
+  - Redpanda cluster (3 nodes, Seastar-based!)
+  - ClickHouse (analytics)
+  - Katran L4 load balancer (Meta OSS)
+
+Performance boost:
+  - Ad Serving: 100k → 6M RPS (60x improvement!)
+  - Bidding: New, <500μs p99
+  - All using Cap'n Proto (zero-copy)
+```
+
 - RTB service (Rust)
 - Fraud detection service (Rust + ML)
 - Kafka cluster (3 nodes)
@@ -206,10 +262,12 @@ Added:
 - Redis Cluster (3 masters, 3 replicas)
 
 Scale:
+
 - 5 application servers
 - 3 database servers
 - 3 Kafka brokers
-```
+
+````
 
 ### Optimizations
 
@@ -219,13 +277,13 @@ Code:
   - ✅ Optimize hot paths with SIMD
   - ✅ Enable PGO (Profile-Guided Optimization)
   - ✅ Zero-copy where possible
-  
+
 Infrastructure:
   - ✅ CPU pinning (NUMA-aware)
   - ✅ Huge pages enabled
   - ✅ TCP tuning (BBR)
   - ✅ NIC tuning (RSS, offloading)
-```
+````
 
 ### Performance Targets
 
@@ -243,6 +301,7 @@ Availability: 99.9%
 ## 📅 Phase 3: Scale & ML (Months 5-8)
 
 ### Goals
+
 - Scale to 1M RPS
 - ML-based optimization
 - <5ms latency p99
@@ -256,21 +315,21 @@ Machine Learning:
   - ✅ Audience expansion (lookalike)
   - ✅ Creative optimization
   - ✅ Fraud detection (deep learning)
-  
+
 Advanced Analytics:
   - ✅ Attribution modeling
   - ✅ Conversion tracking
   - ✅ Custom reports
   - ✅ Data export (CSV, API)
   - ✅ Real-time dashboards
-  
+
 SDK Development:
   - ✅ JavaScript SDK
   - ✅ iOS SDK (Swift)
   - ✅ Android SDK (Kotlin)
   - ✅ Python SDK
   - ✅ Node.js SDK
-  
+
 Developer Portal:
   - ✅ API documentation
   - ✅ Interactive API explorer
@@ -304,7 +363,7 @@ Training (Offline):
 
 Inference (Online):
   Rust gRPC Service → ONNX Runtime → <100μs latency
-  
+
 Features:
   - Real-time features (DragonflyDB)
   - Historical features (ClickHouse)
@@ -328,6 +387,7 @@ ML inference: <100μs
 ## 📅 Phase 4: Global & Enterprise (Months 9-12)
 
 ### Goals
+
 - 10M RPS
 - Multi-region deployment
 - <2ms latency p99 globally
@@ -340,19 +400,19 @@ Multi-Tenancy:
   - ✅ Custom domains
   - ✅ SSO integration
   - ✅ Role-based access control (RBAC)
-  
+
 Enterprise Features:
   - ✅ SLA guarantees
   - ✅ Dedicated support
   - ✅ Custom integrations
   - ✅ Private deployment option
-  
+
 Advanced Fraud:
   - ✅ ML-based bot detection
   - ✅ Device fingerprinting
   - ✅ Behavioral analysis
   - ✅ Click pattern analysis
-  
+
 Privacy & Compliance:
   - ✅ GDPR compliance
   - ✅ CCPA compliance
@@ -368,12 +428,12 @@ Regions:
   - North America (US-East, US-West)
   - Europe (London, Frankfurt)
   - Asia (Singapore, Tokyo)
-  
+
 Per Region:
   - 20 application servers
   - 5 database servers (RF=3 within region)
   - Local caching layer
-  
+
 Total: 120 app servers, 30 DB servers globally
 ```
 
@@ -395,6 +455,7 @@ Global edge latency: <10ms
 ## 📅 Phase 5: Hyperscale (Months 13-24)
 
 ### Goals
+
 - 100M+ RPS
 - Kernel bypass networking
 - <1ms latency p99
@@ -408,14 +469,14 @@ Network:
   - ✅ RDMA for inter-server
   - ✅ Custom L4 load balancer
   - ✅ BGP anycast (own ASN)
-  
+
 Core Services:
   - ✅ Migrate to Seastar (C++)
   - ✅ Thread-per-core architecture
   - ✅ SIMD everywhere
   - ✅ Custom memory allocators
   - ✅ Zero-copy end-to-end
-  
+
 Hardware:
   - ✅ 100Gbps NICs
   - ✅ NVMe-oF (NVMe over Fabrics)
@@ -454,6 +515,7 @@ Availability: 99.999% (5 nines)
 ## 📅 Phase 6: Google-Scale (Months 25-36)
 
 ### Goals
+
 - 1B+ RPS
 - Custom hardware
 - Sub-millisecond everywhere
@@ -466,13 +528,13 @@ Custom Hardware:
   - ✅ FPGA for packet processing
   - ✅ Custom network cards
   - ✅ SmartNICs (Mellanox/Broadcom)
-  
+
 Extreme Optimizations:
   - ✅ Kernel bypass everywhere
   - ✅ Hardware-accelerated crypto
   - ✅ Custom silicon (if justified)
   - ✅ Optical networking
-  
+
 AI/ML:
   - ✅ Custom ML chips (Google TPU alternative)
   - ✅ Distributed training
@@ -488,7 +550,7 @@ Own Network:
   - ✅ Private fiber between DCs
   - ✅ Peering agreements with ISPs
   - ✅ IXP presence (50+ exchanges)
-  
+
 Scale:
   - 20+ datacenters (owned or colocated)
   - 100+ edge PoPs
@@ -547,6 +609,7 @@ Year 3:      100+ engineers (full org)
 ## 🎯 Key Success Metrics Per Phase
 
 ### Phase 1 (MVP)
+
 ```
 ✓ 10k RPS sustained
 ✓ <100ms p99 latency
@@ -555,6 +618,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Phase 2 (Production)
+
 ```
 ✓ 100k RPS sustained
 ✓ <10ms p99 latency
@@ -564,6 +628,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Phase 3 (ML)
+
 ```
 ✓ 1M RPS sustained
 ✓ <5ms p99 latency
@@ -573,6 +638,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Phase 4 (Global)
+
 ```
 ✓ 10M RPS sustained
 ✓ <2ms p99 latency
@@ -582,6 +648,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Phase 5 (Hyperscale)
+
 ```
 ✓ 100M RPS sustained
 ✓ <1ms p99 latency
@@ -591,6 +658,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Phase 6 (Google-scale)
+
 ```
 ✓ 1B+ RPS sustained
 ✓ <1ms p99 latency
@@ -604,6 +672,7 @@ Year 3:      100+ engineers (full org)
 ## 🚀 Getting Started Checklist
 
 ### Week 1
+
 ```
 [ ] Rent 3 servers (Hetzner/OVH)
 [ ] Set up Git repository
@@ -614,6 +683,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Week 2
+
 ```
 [ ] Implement basic HTTP server (Glommio)
 [ ] Set up PostgreSQL + ScyllaDB
@@ -623,6 +693,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Week 3-4
+
 ```
 [ ] Implement ad serving logic
 [ ] Campaign management CRUD
@@ -632,6 +703,7 @@ Year 3:      100+ engineers (full org)
 ```
 
 ### Week 5-8
+
 ```
 [ ] RTB support (OpenRTB)
 [ ] Advanced targeting
@@ -645,26 +717,31 @@ Year 3:      100+ engineers (full org)
 ## 🎓 Learning Path
 
 ### Months 1-2: Rust Fundamentals
+
 - The Rust Book
 - Async Rust (Tokio book)
 - Zero-copy techniques
 
 ### Months 3-4: Systems Programming
+
 - Linux Performance (Brendan Gregg)
 - Network programming
 - Database internals
 
 ### Months 5-8: Distributed Systems
+
 - Designing Data-Intensive Applications
 - Distributed consensus
 - CAP theorem
 
 ### Months 9-12: Scale
+
 - Site Reliability Engineering (Google)
 - System Design Interview books
 - Real-world case studies
 
 ### Year 2+: Cutting Edge
+
 - Kernel bypass (DPDK/XDP)
 - Hardware acceleration
 - Custom silicon design
@@ -676,6 +753,7 @@ Year 3:      100+ engineers (full org)
 This roadmap is ambitious but **achievable**. Companies like ScyllaDB, Redpanda, and ClickHouse were built by small teams with the right technology choices.
 
 **Key to success:**
+
 1. **Start small** - MVP in 2 months
 2. **Measure everything** - Profile constantly
 3. **Scale gradually** - Don't over-engineer
@@ -683,6 +761,7 @@ This roadmap is ambitious but **achievable**. Companies like ScyllaDB, Redpanda,
 5. **Optimize ruthlessly** - Every nanosecond counts
 
 **Your advantages:**
+
 - Modern tech (Rust, Glommio, ScyllaDB)
 - No legacy code
 - Performance-first mindset
